--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 33, 37, 41;
   --bs-body-bg-rgb: 255, 255, 255;
-  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-font-sans-serif: "Poppins", sans-serif;
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --bs-body-font-family: var(--bs-font-sans-serif);
@@ -11112,6 +11112,13 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+}
+.nav-shadow-mb {
+  box-shadow: 0 1px 4px black;
+}
+
+.bg-nav {
+  background-color: #fcfcfc;
 }
 
 /*# sourceMappingURL=style.css.map */
