--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,3 +3,12 @@
 @forward "./components/global";
 @forward "./sections/global";
 
+.nav-shadow-mb {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 1);
+}
+
+.bg-nav {
+  background-color: $body-color;
+}
+
+
