--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -10,7 +10,7 @@ $body-color: #fcfcfc;
 
 $font: "Poppins", sans-serif;
 
-@use "../node_modules/bootstrap/scss/bootstrap.scss" with (
+@forward "../node_modules/bootstrap/scss/bootstrap.scss" with (
   //Color Overrides
   // $primary: $container-color,
   //Font Overrides
