--- a/sass/sections/_education.scss
+++ b/sass/sections/_education.scss
@@ -1,1 +1,24 @@
 @use '../custom' as *;
+
+$education: bachelors, diploma, x;
+
+@each $edu in $education {
+  .education__card__#{($edu)} {
+    border-left: 2px solid black;
+    .degree {
+      padding-top: 1em;
+    }
+    padding-left: 1.5em;
+  }
+
+  .education__card__#{($edu)}::before {
+    content: "";
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    border-radius: 50px;
+    left: 0.4em;
+    background: rgb(180, 180, 180);
+    border: 2px solid #000000;
+  }
+}
