--- a/sass/components/_mixins.scss
+++ b/sass/components/_mixins.scss
@@ -1,1 +1,12 @@
 @use '../custom' as *;
+
+@mixin bdr-with-circle-on-top {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50px;
+  left: -0.6em;
+  background: rgb(180, 180, 180);
+  border: 2px solid #000000;
+}
