--- a/sass/sections/_global.scss
+++ b/sass/sections/_global.scss
@@ -2,6 +2,6 @@
 @use "./profile";
 @use "./education";
 @use "./skills";
-@use "./experiences";
-@use "./certificates";
-@use "./references";
+@use "./experience";
+@use "./certificate";
+@use "./reference";
