--- a/sass/sections/_experience.scss
+++ b/sass/sections/_experience.scss
@@ -1,1 +1,16 @@
-@use '../custom' as *;
+@use "../custom" as *;
+@use "../components/mixins" as *;
+
+$companies: company-1, company-2;
+
+@each $cmpny in $companies {
+  .experience__card--#{($cmpny)} {
+    border-left: 2px solid black;
+    position: relative;
+
+    padding-left: 1.5em;
+  }
+  .experience__card--#{($cmpny)}::before {
+    @include bdr-with-circle-on-top;
+  }
+}
