--- a/sass/sections/_education.scss
+++ b/sass/sections/_education.scss
@@ -5,13 +5,19 @@ $education: bachelors, diploma, x;
 
 @each $edu in $education {
   .education__card--#{($edu)} {
-    border-left: 2px solid black;
+    border-left: 2px solid #646464;
     position: relative;
     .degree {
       padding-top: 1em;
+      font-weight: bolder;
     }
     .year {
       margin-bottom: 0;
+    }
+
+    .clg {
+      font-style: italic;
+      font-weight: lighter;
     }
     padding-left: 1.5em;
   }
