Refactored the code to single codebase for desktop and mobile

--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -9,8 +9,8 @@
   background-color: $body-color;
 }
 
-@include media-breakpoint-up(sm) {
-  .mobile-nav {
+@include media-breakpoint-up(lg) {
+  .nav-bottom-mb {
     display: none;
   }
 }
